# dream-net

./: .gitattributes  .gitignore  AGENTS.md  ASR_TECH_REPORT.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PUBLISHING_SUMMARY.md  QUICKSTART.md  README.md  TECHNICAL_REPORT.md  TODO.md  pyproject.toml  run.sh  tech_spec.md
configs/: operator_v1.yaml  proven_v1.yaml  proven_v2.yaml
experiments/: __init__.py  asr_acoustic.py  asr_train.py  dream_full_train.py  gru_baseline.py  listen.py  long_cycle.py  operator_prediction.py  rank_ablation.py  reconstruction.py  repr_tests.py  speaker_switch.py  speaker_test.py  spike_reset.py  stress_test.py
src/dream_net/: __init__.py
src/dream_net/core/: __init__.py  cell.py  config.py  state.py
src/dream_net/layers/: __init__.py  layer.py
src/dream_net/multimodal/: __init__.py  encoders.py  fusion.py  heads.py  model.py
src/dream_net/utils/: __init__.py  statistics.py
tests/: __init__.py  test_cell.py  test_config.py  test_layer.py  test_multimodal.py
